--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -9,17 +9,13 @@ list(
   baseline/baseline.cu
   unroll/unroll.cc
   unroll/unroll.cu
-  # no_bank_conflict/no_bank_conflict.cc
-  # no_bank_conflict/no_bank_conflict.cu
-  # add_during_load/add_during_load.cc
-  # add_during_load/add_during_load.cu
-  # unroll_last_warp/unroll_last_warp.cc
-  # unroll_last_warp/unroll_last_warp.cu
+  stride/stride.cc
+  stride/stride.cu
+  # add_during_load/add_during_load.cc add_during_load/add_during_load.cu
+  # unroll_last_warp/unroll_last_warp.cc unroll_last_warp/unroll_last_warp.cu
   # completely_unroll/completely_unroll.cc
-  # completely_unroll/completely_unroll.cu
-  # shuffle/shuffle.cc
-  # shuffle/shuffle.cu
-  )
+  # completely_unroll/completely_unroll.cu shuffle/shuffle.cc shuffle/shuffle.cu
+)
 
 cuda_add_executable(cuda_benchmark ${SOURCE_FILES})
 target_link_libraries(cuda_benchmark bm_lib)
