update outer memory

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -13,7 +13,8 @@ list(
   stride/stride.cu
   fix_block_size/fix_block_size.cc
   fix_block_size/fix_block_size.cu
-  # unroll_last_warp/unroll_last_warp.cc unroll_last_warp/unroll_last_warp.cu
+  outer_memory/outer_memory.cc
+  outer_memory/outer_memory.cu
   # completely_unroll/completely_unroll.cc
   # completely_unroll/completely_unroll.cu shuffle/shuffle.cc shuffle/shuffle.cu
 )
