--- a/benchmarks/bm_lib/CMakeLists.txt
+++ b/benchmarks/bm_lib/CMakeLists.txt
@@ -1,8 +1,8 @@
-file(GLOB_RECURSE SRCS *.cc *.h *.hpp)
+file(GLOB_RECURSE SRCS *.cu *.h *.hpp)
 
 if(NOT BUILD_SHARED_LIBS)
-  add_library(bm_lib ${SRCS})
+  cuda_add_library(bm_lib ${SRCS})
 else()
-  add_library(bm_lib SHARED ${SRCS})
+  cuda_add_library(bm_lib SHARED ${SRCS})
 endif()
 target_link_libraries(bm_lib benchmark::benchmark pthread)
