update verify stride/ fixblocksize

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -7,8 +7,12 @@ list(
   SOURCE_FILES
   baseline/baseline.cc
   baseline/baseline.cu
-  # unroll/unroll.cc unroll/unroll.cu stride/stride.cc stride/stride.cu
-  # fix_block_size/fix_block_size.cc fix_block_size/fix_block_size.cu
+  unroll/unroll.cc
+  unroll/unroll.cu
+  stride/stride.cc
+  stride/stride.cu
+  fix_block_size/fix_block_size.cc
+  fix_block_size/fix_block_size.cu
   # outer_memory/outer_memory.cc outer_memory/outer_memory.cu
   # completely_unroll/completely_unroll.cc
   # completely_unroll/completely_unroll.cu define_extend/define_extend.cc
