--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -10,17 +10,14 @@ list(
   # MatrixMulCUDA2/strider.cu MatrixMulCUDA3/aligner.cc
   # MatrixMulCUDA3/aligner.cu MatrixMulCUDA4/multiloader.cc
   # MatrixMulCUDA4/multiloader.cu MatrixMulCUDA5/bankconflictavoider.cc
-  # MatrixMulCUDA5/bankconflictavoider.cu MatrixMulCUDA6/pingpangbuffer.cc
-  # MatrixMulCUDA6/pingpangbuffer.cu MatrixMulCUDA7/sgemm128.cc
-  # MatrixMulCUDA7/sgemm128.cu
-  MatrixMulCUDA8/dense.cc
-  MatrixMulCUDA8/dense.cu
+  # MatrixMulCUDA5/bankconflictavoider.cu MatrixMulCUDA6/pingpongbuffer.cc
+  # MatrixMulCUDA6/pingpongbuffer.cu MatrixMulCUDA7/sgemm128.cc
+  # MatrixMulCUDA7/sgemm128.cu MatrixMulCUDA8/dense.cc MatrixMulCUDA8/dense.cu
+  # MatrixMulCUDA9/cublas.cc MatrixMulCUDA9/cublas.cu
   MatrixMulCUDA10/yzaiustc.cc
   MatrixMulCUDA10/yzaiustc.cu
   MatrixMulCUDA11/yhs.cc
   MatrixMulCUDA11/yhs.cu
-  MatrixMulCUDA9/cublas.cc
-  MatrixMulCUDA9/cublas.cu
   # interleave/interleave.cc interleave/interleave.cu
 )
 
