--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.14)
+cmake_minimum_required(VERSION 3.5)
 
 project(
   cuda_gemm_benchmark
@@ -25,37 +25,42 @@ option(USE_SYSTEM_LIBS "use system libs or not" OFF)
 
 # Find cuda SDK
 find_package(CUDA REQUIRED)
+message("CUDA library directories: ${CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES}")
 
-if(USE_SYSTEM_LIBS)
-  find_package(GTest REQUIRED)
-  find_package(benchmark REQUIRED)
-else()
-
-  include(FetchContent)
-  # googletest
+# googletest
+include(FetchContent)
+if(NOT googletest_POPULATED)
   FetchContent_Declare(
     googletest
     GIT_REPOSITORY https://github.com/google/googletest.git
     GIT_TAG release-1.11.0
-    GIT_SHALLOW TRUE)
+    GIT_SHALLOW TRUE
+    SOURCE_DIR ${CMAKE_SOURCE_DIR}/deps/googletest
+    )
   # https://cmake.org/cmake/help/latest/policy/CMP0077.html
   set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
   set(INSTALL_GTEST OFF)
   FetchContent_MakeAvailable(googletest)
-  # googlebenchmark
+  FetchContent_GetProperties(googletest)
 
+endif()
+
+
+# googlebenchmark
+if(NOT googlebenchmark_POPULATED)
   FetchContent_Declare(
     googlebenchmark
     GIT_REPOSITORY https://github.com/google/benchmark.git
     GIT_TAG v1.8.1
-    GIT_SHALLOW TRUE)
+    GIT_SHALLOW TRUE
+    SOURCE_DIR ${CMAKE_SOURCE_DIR}/deps/googlebenchmark
+    )
   set(BENCHMARK_ENABLE_TESTING OFF)
   set(BENCHMARK_ENABLE_INSTALL OFF)
   set(HAVE_GNU_POSIX_REGEX OFF)
   set(BENCHMARK_INSTALL_DOCS OFF)
   FetchContent_MakeAvailable(googlebenchmark)
   FetchContent_GetProperties(googlebenchmark)
-
 endif()
 
 enable_testing()
