add self gemm test 1

--- a/benchmarks/bm_lib/CMakeLists.txt
+++ b/benchmarks/bm_lib/CMakeLists.txt
@@ -6,3 +6,5 @@ else()
   cuda_add_library(bm_lib SHARED ${SRCS})
 endif()
 target_link_libraries(bm_lib benchmark::benchmark pthread)
+cuda_add_cublas_to_target(bm_lib)
+
