--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,6 @@ option(USE_SYSTEM_LIBS "use system libs or not" OFF)
 
 # Find cuda SDK
 find_package(CUDA REQUIRED)
-message("CUDA library directories: ${CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES}")
 
 # googletest
 include(FetchContent)
@@ -35,8 +34,7 @@ if(NOT googletest_POPULATED)
     GIT_REPOSITORY https://github.com/google/googletest.git
     GIT_TAG release-1.11.0
     GIT_SHALLOW TRUE
-    SOURCE_DIR ${CMAKE_SOURCE_DIR}/deps/googletest
-    )
+    SOURCE_DIR ${CMAKE_SOURCE_DIR}/deps/googletest)
   # https://cmake.org/cmake/help/latest/policy/CMP0077.html
   set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
   set(INSTALL_GTEST OFF)
@@ -45,7 +43,6 @@ if(NOT googletest_POPULATED)
 
 endif()
 
-
 # googlebenchmark
 if(NOT googlebenchmark_POPULATED)
   FetchContent_Declare(
@@ -53,8 +50,7 @@ if(NOT googlebenchmark_POPULATED)
     GIT_REPOSITORY https://github.com/google/benchmark.git
     GIT_TAG v1.8.1
     GIT_SHALLOW TRUE
-    SOURCE_DIR ${CMAKE_SOURCE_DIR}/deps/googlebenchmark
-    )
+    SOURCE_DIR ${CMAKE_SOURCE_DIR}/deps/googlebenchmark)
   set(BENCHMARK_ENABLE_TESTING OFF)
   set(BENCHMARK_ENABLE_INSTALL OFF)
   set(HAVE_GNU_POSIX_REGEX OFF)
