--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -7,8 +7,10 @@ list(
   SOURCE_FILES
   MatrixMulCUDA0/naive.cc
   MatrixMulCUDA0/naive.cu
-  # MatrixMulCUDA1/blocker.cc MatrixMulCUDA1/blocker.cu
-  # MatrixMulCUDA2/strider.cc MatrixMulCUDA2/strider.cu
+  MatrixMulCUDA1/blocker.cc
+  MatrixMulCUDA1/blocker.cu
+  MatrixMulCUDA2/strider.cc
+  MatrixMulCUDA2/strider.cu
   # MatrixMulCUDA3/aligner.cc MatrixMulCUDA3/aligner.cu
   # MatrixMulCUDA4/multiloader.cc MatrixMulCUDA4/multiloader.cu
   # MatrixMulCUDA5/bankconflictavoider.cc MatrixMulCUDA5/bankconflictavoider.cu
