[fix] remove double frag : result same

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -26,9 +26,12 @@ list(
   MatrixMulCUDA9/cublas.cc
   MatrixMulCUDA9/cublas.cu
   # MatrixMulCUDA10/yzaiustc.cc MatrixMulCUDA10/yzaiustc.cu
-  # MatrixMulCUDA11/yhs.cc MatrixMulCUDA11/yhs.cu MatrixMulCUDA12/czn.cc
-  # MatrixMulCUDA12/czn.cu MatrixMulCUDA13/czn_k16.cc MatrixMulCUDA13/czn_k16.cu
-)
+  # MatrixMulCUDA11/yhs.cc MatrixMulCUDA11/yhs.cu 
+  MatrixMulCUDA12/czn.cc
+  MatrixMulCUDA12/czn.cu
+  # MatrixMulCUDA13/czn_k16.cc
+  # MatrixMulCUDA13/czn_k16.cu
+  )
 
 cuda_add_executable(cuda_benchmark ${SOURCE_FILES})
 cuda_add_cublas_to_target(cuda_benchmark)
